@@ -14,6 +14,13 @@ version 2.63
 	    A couple of fixes to the build system for Android. Thanks
 	    to Metin Kaya for the patches.
 
+	    Remove the interface:<interface> argument in --dhcp-range, and
+	    the interface argument to --enable-tftp. These were a
+	    still-born attempt to allow automatic isolated
+	    configuration by libvirt, but have never (to my knowledge)
+	    been used, had very strange semantics, and have been
+	    superceded by other mechanisms. 
+
 
 version 2.62
             Update German translation. Thanks to Conrad Kostecki.
